hphp/hack/test/typecheck/property_declaration_with_attribute_missing_visibility_modifier.php.exp
File "property_declaration_with_attribute_missing_visibility_modifier.php", line 3, characters 3-26:
Property declarations require a visibility modifier such as `public`, `private` or `protected`. (Parsing[1002])
File "property_declaration_with_attribute_missing_visibility_modifier.php", line 2, characters 7-7:
Class `C` has properties that cannot be null and aren't always set in `__construct`. (NastCheck[3015])
File "property_declaration_with_attribute_missing_visibility_modifier.php", line 4, characters 7-8:
`$this->x` is not initialized.
File "property_declaration_with_attribute_missing_visibility_modifier.php", line 3, characters 5-14:
The `__Override` attribute cannot be used on an instance property. (Typing[4231])
